z-index issue

--- a/css/subpages-general.css
+++ b/css/subpages-general.css
@@ -36,7 +36,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   position: fixed;
-  z-index: 1;
+  z-index: 30;
   background-color: light-dark(var(--light-color), var(--dark-color));
 }
 
